--- a/examples/image_segmentation/android/confidence_mask/app/src/main/res/layout/fragment_gallery.xml
+++ b/examples/image_segmentation/android/confidence_mask/app/src/main/res/layout/fragment_gallery.xml
@@ -18,18 +18,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/bottom_sheet_peek_height">
-
-        <TextView
-            android:id="@+id/tvPlaceholder"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="@string/tv_gallery_placeholder"
-            app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="@dimen/bottom_sheet_peek_height"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -42,12 +35,6 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@null"
                 android:scaleType="fitStart"
-                android:visibility="gone" />
-
-            <VideoView
-                android:id="@+id/videoView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
                 android:visibility="gone" />
 
             <com.google.mediapipe.examples.imagesegmenter.OverlayView
@@ -66,7 +53,7 @@
                 android:visibility="gone" />
 
         </RelativeLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabGetContent"
@@ -76,12 +63,12 @@
         android:backgroundTint="@color/mp_color_primary"
         android:contentDescription="@null"
         android:src="@drawable/ic_baseline_add_24"
-        app:tint="@android:color/white"
-        app:useCompatPadding="true"
         app:layout_anchor="@id/bottom_sheet_layout"
         app:layout_anchorGravity="end"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@android:color/white"
+        app:useCompatPadding="true" />
 
     <include
         android:id="@+id/bottom_sheet_layout"
