--- a/examples/image_segmentation/android/confidence_mask/app/src/main/res/navigation/nav_graph.xml
+++ b/examples/image_segmentation/android/confidence_mask/app/src/main/res/navigation/nav_graph.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     ~ Copyright 2023 The TensorFlow Authors. All Rights Reserved.
     ~
     ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,34 +16,10 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/permissions_fragment">
+    app:startDestination="@id/gallery_fragment">
 
-    <fragment
-        android:id="@+id/permissions_fragment"
-        android:name="com.google.mediapipe.examples.imagesegmenter.fragments.PermissionsFragment"
-        android:label="PermissionsFragment">
-
-        <action
-            android:id="@+id/action_permissions_to_camera"
-            app:destination="@id/camera_fragment"
-            app:popUpTo="@id/permissions_fragment"
-            app:popUpToInclusive="true" />
-
-    </fragment>
-
-    <fragment
-        android:id="@+id/camera_fragment"
-        android:name="com.google.mediapipe.examples.imagesegmenter.fragments.CameraFragment"
-        android:label="CameraFragment">
-
-        <action
-            android:id="@+id/action_camera_to_permissions"
-            app:destination="@id/permissions_fragment"
-            app:popUpTo="@id/camera_fragment"
-            app:popUpToInclusive="true" />
-    </fragment>
     <fragment
         android:id="@+id/gallery_fragment"
-        android:name="com.google.mediapipe.examples.imagesegmenter.fragments.GalleryFragment"
+        android:name="com.google.mediapipe.examples.imagesegmenter.GalleryFragment"
         android:label="GalleryFragment" />
 </navigation>
